--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,9 +1,16 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/student
-spring.datasource.username=postgres
-spring.datasource.password=SpringData
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.properties.hibernate.format_sql=true
+# Enabling H2 Console
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:student
+spring.data.jpa.repositories.bootstrap-mode=default
+
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.defer-datasource-initialization=true
 
 server.error.include-message=always
+
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui-custom.html
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
